feat: add registration path field point config
